# ROS2_Labs

./: CMakeLists.txt  README.md  package.xml
launch/: draw_initials.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
src/: initials.cpp
